--- a/Pipfile
+++ b/Pipfile
@@ -15,6 +15,8 @@ wordfreq = "*"
 unidecode = "*"
 html2text = "*"
 lsm-db = {git = "https://github.com/coleifer/python-lsm-db/"}
+python-levenshtein = "*"
+xxhash = "*"
 
 [requires]
 python_version = "3.7"
